# kra-vscu-microservice

./: .env  .gitignore  Cargo.toml
logs/: app.log.2026-01-19  app.log.2026-01-20  app.log.2026-01-21  app.log.2026-01-22  app.log.2026-01-23  app.log.2026-01-24  app.log.2026-01-25  app.log.2026-01-26  app.log.2026-01-30  app.log.2026-02-01  app.log.2026-02-02  app.log.2026-02-03
migration/: Cargo.toml
migration/src/: lib.rs  m20260116_143510_registered_users.rs  m20260119_134024_branch_customers.rs  m20260119_142033_branch_users.rs  m20260119_144505_branch_insurances.rs  m20260119_194639_stock_master.rs  m20260120_133135_product_save_items.rs  m20260121_190839_sign_up.rs  m20260123_093316_device_credentials.rs  m20260125_184512_item_sales.rs  m20260203_042535_make_btch_no_nullable.rs  m20260203_051617_make_id_big.rs  m20260203_061904_make_tin_notnull.rs  m20260203_062940_make_tin_notnull_alter.rs  m20260203_072820_new_stock_master.rs
src/: main.rs
src/branch_operations/: mod.rs  route_branches.rs
src/initialization/: initialize.rs
src/models/: branch_customers.rs  branch_insurances.rs  branch_users.rs  initialization.rs  mod.rs  product_save_items.rs  sales_data_model.rs  sales_uploads.rs  sign_up.rs  stock_master.rs
src/product_management/: items_save_items.rs  items_select_items.rs  mod.rs
src/sales/: routing.rs
src/signup/: mod.rs  signup_login.rs
src/stock_management/: mod.rs  route_stock_master.rs
src/types/: braches_data_payload.rs  info.rs  initializeTypes.rs  mod.rs  product_management_payload_types.rs  salespayloadtype.rs  signup.rs  (+1 more)
(+5 files in other folders)
