[package]
name = "vscu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"

dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json"] }
rust_decimal = "1.40.0"
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "chrono",
    "runtime-tokio-rustls",
    "macros"
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors","trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
aes-gcm-siv = "0.11"
headers = "0.4"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
